fix alignment errors

--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -419,9 +419,37 @@ a:hover, a:active, a:focus {
   background: #E9724C;
 }
 
-.cardy-img {
-  width: 45vh;
+.card {
+  width: auto;
+  height: auto;
+  margin: auto;
 }
+
+.cardy-img {
+  max-width: 98%;
+  height: auto;
+}
+
+@media only screen and (min-width: 768px) {
+  .card {
+    width: auto;
+    height: 35vh;
+    margin: auto;
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  .card {
+    width: auto;
+    height: 50vh;
+    margin: auto;
+  }
+
+  .card-body {
+    height: 30vh;
+  }
+}
+
 #service p {
   font-size: 18px;
   line-height: 30px;
@@ -435,8 +463,6 @@ a:hover, a:active, a:focus {
   font-size: 42px;
   padding-bottom: 22px;
 }
-
-
 
 /*---------------------------------------
     Experience section              
